--- a/_posts/2015-10-13-commands.md
+++ b/_posts/2015-10-13-commands.md
@@ -12,7 +12,7 @@ Actually 3 old commands that are now back:
 
 I looked more into what is classed as a "monster" and it's pretty loose so I added a lot more girls to the list.
 
-### Easy [Idol Love Live OTP](http://twitter.com/home?status=%40AcePictureBot%20Who%20is%20my%20Idol%20Love%20Live%20OTP%3F)
+##### Easy [Idol Love Live OTP](http://twitter.com/home?status=%40AcePictureBot%20Who%20is%20my%20Idol%20Love%20Live%20OTP%3F)
 
 ### More Shipgirl Options
 
