--- a/_posts/2015-10-13-commands.md
+++ b/_posts/2015-10-13-commands.md
@@ -17,3 +17,5 @@ I looked more into what is classed as a "monster" and it's pretty loose so I add
 ### More Shipgirl Options
 
 ##### [Shipgirl Aoki](http://twitter.com/home?status=%40AcePictureBot%20Who%20is%20my%20Shipgirl%20Aoki%3F) and [Shipgirl All OTP ](http://twitter.com/home?status=%40AcePictureBot%20Who%20is%20my%20Shipgirl%20All%20OTP%3F)
+
+For more infomation on these browse [the full commands list](http://ace3df.github.io/AcePictureBot/commands/).
